pkg/gateway/xds/translator/testdata/out/xds-ir/ratelimit.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: first-route
              descriptorValue: first-route
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/first-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        path: example
      name: second-route
      route:
        cluster: second-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: second-route
              descriptorValue: second-route
          - requestHeaders:
              descriptorKey: rule-0-match-0
              headerName: x-user-id
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/second-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        path: test
      name: third-route
      route:
        cluster: third-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: third-route
              descriptorValue: third-route
          - genericKey:
              descriptorKey: rule-0-match--1
              descriptorValue: rule-0-match--1
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/third-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
